syntax = "proto3";

import "google/protobuf/wrappers.proto";

option go_package = "gin_tonic/internal/controllers/apiGateway/book/findBook/gRPC/findBook";

package FindBookGrpc;

service FindBook {
  rpc FindBook(Request) returns (Response) {}
}

message Request {
  int32 bookId = 1;
}

message Response {
  string name = 1;
  int32 book_id = 2;
  int32 author_id = 3;
  string category = 4;
  google.protobuf.StringValue description = 5;
  google.protobuf.StringValue created_at = 6;
  google.protobuf.StringValue updated_at = 7;
  string error_message = 8;
}
